hphp/test/slow/ext_gd/native-unimpl.php.expectf

Fatal error: Call to unimplemented native function imagecreatefromxpm() in %s/native-unimpl.php on line 5
